# pyclay

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: _clay_impl.c
src/pyclay/: __init__.py  _clay_lib.py  _clay_types.py  configs.py  data.py  enums.py  render_commands.py
src/pyclay/_clay/: __init__.py  _enums.py  _lib.py  _types.py  _types.pyi  factories.py
tests/: conftest.py  test_clay_factories.py  test_clay_factories_validation.py  test_clay_lowlevel.py
